# TEST5000

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
doxygen/html/: __mingw__dxhelper_8h_source.html  _a_l_check_8hpp_source.html  _activity_8hpp_source.html  _al_resource_8hpp_source.html  _android_2_clipboard_impl_8hpp_source.html  _android_2_cursor_impl_8hpp_source.html  _android_2_input_impl_8hpp_source.html  _android_2_joystick_impl_8hpp_source.html  _android_2_sensor_impl_8hpp_source.html  _audio_2_export_8hpp_source.html  _audio_8hpp_source.html  _audio_device_8hpp_source.html  _autorelease_pool_wrapper_8h_source.html  _b_g___tile_8h_source.html  _blend_mode_8hpp_source.html  _bonus_8h_source.html  _bonus_strategy_8h_source.html  _camera_8h_source.html  _circle_shape_8hpp_source.html  _clipboard_8hpp_source.html  _clipboard_impl_8hpp_source.html  _clock_8hpp_source.html  _cocoa_app_delegate_8h_source.html  _color_8hpp_source.html  _config_8hpp_source.html  _context_8hpp_source.html  _context_settings_8hpp_source.html  _convex_shape_8hpp_source.html  _cursor_8hpp_source.html  _cursor_impl_8hpp_source.html  _display_8hpp_source.html  _drawable_8hpp_source.html  _e_g_l_check_8hpp_source.html  _eagl_context_8hpp_source.html  _effect_8hpp_source.html  _egl_context_8hpp_source.html  _entity_8h_source.html  _entity_model_8h_source.html  _entity_view_8h_source.html  _err_8hpp_source.html  (+1590 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  (+78 more)
src/gui/BG_TILE/: BG_Tile.cpp  BG_Tile.h
src/gui/ENTITY_VIEW/: EntityView.h
src/gui/GAME/: Game.cpp  Game.h
src/gui/PLATFORM/: Platform.cpp  Platform.h
src/gui/PLAYER/: Player.cpp  Player.h
src/gui/TILEMAP/: TileMap.cpp  TileMap.h
src/logic/BONUS/: Bonus.h  BonusStrategy.h
src/logic/CAMERA/: Camera.cpp  Camera.h
src/logic/ENTITY/: Entity.h
src/logic/ENTITY_MODEL/: EntityModel.cpp  EntityModel.h
src/logic/OBSERVER/: Observer.h
src/logic/PLATFORM/: Platform.cpp  Platform.h  PlatformHorizontal.cpp  PlatformHorizontal.h  PlatformStatic.cpp  PlatformStatic.h  PlatformTemporary.cpp  PlatformTemporary.h  PlatformVertical.cpp  PlatformVertical.h
src/logic/PLAYER/: Player.cpp  Player.h
src/logic/RANDOM/: Random.cpp  Random.h
src/logic/SCORE/: Score.cpp  Score.h  score.txt
(+6 files in other folders)
